objects/blng__UsageSummary__c.object
<CustomObject>
    <fields>
        <fullName>Order_Product_Name__c</fullName>
        <formula>blng__OrderProduct__r.SBQQ__QuoteLine__r.SBQQ__ProductName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AccountUsageSummary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__AppliedUnitPrice__c</fullName>
        <label>Applied Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyAmount__c</fullName>
        <label>Base Currency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXDate__c</fullName>
        <label>Base Currency FX Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXRate__c</fullName>
        <label>Base Currency FX Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrency__c</fullName>
        <label>Base Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BilledQuantity__c</fullName>
        <label>Billed Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__BilledRevenue__c</fullName>
        <label>Billed Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__GroupedQuantity__c</fullName>
        <label>Grouped Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__IncludedUnbilledUsage__c</fullName>
        <label>Included Unbilled Usage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__IncludedUsageExhausted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Included Usage Exhausted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <referenceTo>blng__InvoiceLine__c</referenceTo>
        <relationshipName>InvoiceLineUsageMediations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceRunProcessingStatus__c</fullName>
        <label>Invoice Run Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceRunProcessingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__InvoiceRunStartDate__c</fullName>
        <label>Invoice Run Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceRunStatusIndex__c</fullName>
        <externalId>true</externalId>
        <label>Invoice Run Status (Index)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Run</label>
        <referenceTo>blng__InvoiceRun__c</referenceTo>
        <relationshipLabel>Usage Summaries</relationshipLabel>
        <relationshipName>InvoiceRunUsageSummary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>blng__Invoice__c</referenceTo>
        <relationshipName>InvoiceUsageMediations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__MatchingAttribute__c</fullName>
        <label>Matching Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__MatchingId__c</fullName>
        <externalId>true</externalId>
        <label>Matching ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__NextBillingDate__c</fullName>
        <label>Next Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__OrderItemConsumptionSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Item Consumption Schedule</label>
        <referenceTo>SBQQ__OrderItemConsumptionSchedule__c</referenceTo>
        <relationshipLabel>Usage Summary</relationshipLabel>
        <relationshipName>UsageSummariesOICS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__OrderProduct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Usage Summaries</relationshipLabel>
        <relationshipName>OrderProductUsageMediations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>OrderUsageMediations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__OverrideStatus__c</fullName>
        <label>Override Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__OverrideStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__OverrideSummaryEndDate__c</fullName>
        <label>Override Summary End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__OverrideSummaryStartDate__c</fullName>
        <label>Override Summary Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__PreratedAmount__c</fullName>
        <label>Prerated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__PreratedQuantity__c</fullName>
        <label>Prerated Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__UsageSummaryStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Subtotal__c</fullName>
        <label>Unbilled Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__SummaryEndDate__c</fullName>
        <label>Summary End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__SummaryStartDate__c</fullName>
        <label>Summary Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__TotalQuantity__c</fullName>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__TotalRevenue__c</fullName>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__UnbilledQuantity__c</fullName>
        <label>Unbilled Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__UnbilledRevenue__c</fullName>
        <label>Unbilled Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__UnitOfMeasure__c</fullName>
        <label>Unit Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__UnitOfMeasure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__UsageCount__c</fullName>
        <label>Usage Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Usage Summary</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__Order__c</columns>
        <columns>blng__OrderProduct__c</columns>
        <columns>blng__Status__c</columns>
        <columns>blng__UnbilledQuantity__c</columns>
        <columns>blng__BilledQuantity__c</columns>
        <columns>blng__TotalQuantity__c</columns>
        <columns>blng__UnitPrice__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>US-{0000}</displayFormat>
        <label>Usage Summary</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>